@@ -1,3 +1,10 @@
+TAG: gbseqload-5-2-1-1
+DATE: 05/05/2015
+STAFF: sc
+CHANGES: 
+* gbseqload.config.default - removed QC report config
+* gbseqload.sh - removed calls to QC reports
+
 TAG: gbseqload-tr11750-BP
 DATE: 04/15/2015
 STAFF: kstone
